--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-300.1KB/s(Youtube:不良林), server: 185.167.116.253, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇦🇺 澳大利亚-250.6KB/s(Youtube:不良林), server: 185.167.116.253, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇺🇸 美国-730.4KB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-773.4KB/s(Youtube:不良林), server: 198.57.27.184, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-1.04MB/s(Youtube:不良林), server: 198.57.27.184, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇦🇺 澳大利亚-578.9KB/s(Youtube:不良林), server: 185.167.116.253, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇨🇳 台湾-804.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇬🇧 英国-295.7KB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇬🇧 英国-623.4KB/s(Youtube:不良林), server: 152.89.210.84, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇬🇧 英国-255.8KB/s(Youtube:不良林), server: 152.89.210.105, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-249.3KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-372.4KB/s(Youtube:不良林), server: 198.57.27.184, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-617.9KB/s(Youtube:不良林), server: 198.57.27.184, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-754.1KB/s(Youtube:不良林), server: 198.57.27.184, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-395.3KB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-225.3KB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林), server: 185.167.116.253, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇦🇺 澳大利亚-300.3KB/s(Youtube:不良林), server: 185.167.116.253, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇬🇧 英国-438.7KB/s(Youtube:不良林), server: 152.89.210.84, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇬🇧 英国-909.6KB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-300.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-773.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-578.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-804.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-295.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-623.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-255.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-249.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-617.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-909.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-300.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-773.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-578.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-804.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-295.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-623.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-255.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-249.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-617.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-909.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-300.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-773.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-578.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-804.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-295.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-623.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-255.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-249.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-617.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-909.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-804.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-300.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-773.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-578.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-804.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-295.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-623.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-255.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-249.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-617.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-909.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-300.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-773.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-578.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-804.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-295.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-623.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-255.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-249.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-617.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-909.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-300.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-773.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-578.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-804.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-295.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-623.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-255.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-249.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-617.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-909.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-300.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-773.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-578.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-804.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-295.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-623.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-255.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-249.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-617.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-754.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-909.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
