--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-421.9KB/s(Youtube:不良林), server: 185.167.116.253, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇨🇦 加拿大-702.2KB/s(Youtube:不良林), server: 134.195.196.231, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-388.7KB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-436.3KB/s(Youtube:不良林), server: 198.57.27.184, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: 185.167.117.171, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇦🇺 澳大利亚-431.0KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-554.5KB/s(Youtube:不良林), server: 198.57.27.184, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-783.9KB/s(Youtube:不良林), server: 198.57.27.184, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇷🇺 俄罗斯联邦-390.2KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-362.5KB/s(Youtube:不良林), server: sg0601.fans8.xyz, port: 443, type: trojan, password: 6dcfe99d-90ac-433d-9c8d-f952841ed740, sni: sg0601.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇯🇵 日本-345.8KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇰🇷 韩国-326.2KB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-421.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-431.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-421.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-431.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-421.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-431.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-421.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-431.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-421.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-431.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-421.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-431.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-421.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-431.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
